--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,6 +22,7 @@ requirements:
     - pip
     - python
     - setuptools
+    - wheel
   run:
     - python
     - setuptools  # depends on pkg_resources at runtime
