--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -48,7 +48,7 @@ about:
   license_file: LICENSE
   summary: Node.js virtual environment builder
   dev_url: https://github.com/ekalinin/nodeenv
-  doc_url: https://ekalinin.github.io/nodeenv/
+  doc_url: https://github.com/ekalinin/nodeenv
 
 extra:
   recipe-maintainers:
