--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,6 +9,8 @@ source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://github.com/ekalinin/nodeenv/archive/{{ version }}.tar.gz
   sha256: a9e9e36e1be6439e877c53e7f27ce068f75b82cc08201f2c68471687199cfd7b
+  patches:
+    - tests_windows.patch  # [win]
 
 build:
   number: 0
@@ -18,6 +20,8 @@ build:
   script: {{ PYTHON }} -m pip install . --no-deps -vv
 
 requirements:
+  build:
+    - m2-patch # [win]
   host:
     - pip
     - python
