--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,12 +33,14 @@ requirements:
 
 test:
   commands:
+    - pip check
     - nodeenv --help
     # skip test_smoke because nodejs fails with:
     #   nodejs: /lib64/libc.so.6: version `GLIBC_2.16' not found (required by nodejs)
     # let's assume it's an issue with the docker image
     - pytest tests -ra -k "not test_smoke"
   requires:
+    - pip
     - pytest
     - mock
     - coverage
