--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,6 +8,9 @@ package:
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/nodeenv-{{ version }}.tar.gz
   sha256: 6ec12890a2dab7946721edbfbcd91f3319c6ccc9aec47be7c7e6b7011ee6645f
+  patches:
+    # Update 1: patch still needed.
+    - tests_windows.patch  # [win]
 
 build:
   number: 0
@@ -20,6 +23,8 @@ build:
   skip: True  # [py<37]
 
 requirements:
+  build:
+    - m2-patch  # [win]
   host:
     - pip
     - python
@@ -48,13 +53,19 @@ test:
 
 about:
   home: https://ekalinin.github.io/nodeenv/
+  summary: Node.js virtual environment builder
   license: BSD-3-Clause
   license_family: BSD
   license_file: LICENSE
-  summary: Node.js virtual environment builder
+  description: |
+    nodeenv (node.js virtual environment) is a tool to create isolated node.js environments.
+    It creates an environment that has its own installation directories, that doesn't share libraries with other node.js virtual environments.
+    Also new environment can be integrated with environment which was built by virtualenv (python).
   dev_url: https://github.com/ekalinin/nodeenv
-  doc_url: https://github.com/ekalinin/nodeenv
+  doc_url: https://github.com/ekalinin/nodeenv/blob/master/README.rst
 
 extra:
   recipe-maintainers:
     - nicoddemus
+  skip-lints:
+    - python_build_tool_in_run
